Fix alignment of calculator buffer in Chrome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
   background-color: #555;
   color: white;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   font-size: 3rem;
   padding: 8px;
